# Habrio

./: .dockerignore  .env.example  .replit  API_DETAILS.txt  Dockerfile  ENVIRONMENT_SETUP.txt  README.md  celery_app.py  debug.txt  details.txt  docker-compose.yml  extensions.py  logging.md  main.py  merge_all.py  merged_app.py  metrics.md  package-lock.json  postman_collection.json  postman_env.json  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ci.yml
agent/: agent_core.py  prompt_templates.py  query_handler.py  tools.py
app/: __init__.py  api.py  cli.py  config.py  errors.py  logging.py  metrics.py  telemetry.py  test_support.py
app/auth/: permissions.py
app/routes/: __init__.py  admin.py  agent.py  auth.py  cart.py  item.py  order.py  shop.py  user.py  vendor.py  wallet.py
app/routes/admin/: __init__.py
app/routes/consumer/: __init__.py  agent.py  cart.py  items.py  orders.py  profile.py  shops.py  (+1 more)
app/schemas/: auth.py  onboarding.py  vendor.py
app/services/: order_service.py  shop_service.py  vendor_service.py  wallet_ops.py
app/tasks/: __init__.py  notifications.py  vendor.py
app/utils/: __init__.py  auth.py  db.py  jwt.py  phone.py  responses.py  validation.py
helpers/: jwt_helpers.py
migrations/versions/: 055cb63f2358_testing_first_time.py  3c870a7e6b9d_add_order_index_and_bigints.py  4b0611360b37_codex_31_july.py  db3ea466a6e0_initial_schema.py
models/: __init__.py  cart.py  item.py  order.py  shop.py  user.py  vendor.py  wallet.py
monitoring/: alert_rules.yml  prometheus.yml
postman/: Habrio.postman_collection.json
services/: admin.py  auth.py  cart.py  consumerorder.py  item.py  shop.py  user.py  vendor.py  vendororder.py  wallet.py
tests/: conftest.py  test_admin.py  test_api_versioning.py  test_auth.py  test_cart_order.py  test_config.py  test_consumer_orders_wallet.py  test_contract_access.py  test_cors_security.py  test_errors.py  test_health.py  test_jwt_auth.py  test_logging.py  test_order_followup.py  test_permissions.py  test_query_plans.py  test_rate_limit.py  test_role_access.py  test_shop_item.py  test_tracing.py  test_user.py  test_vendor.py  test_vendor_orders_wallet.py  test_wallet.py  test_wallet_ops.py
utils/: auth_decorator.py  responses.py  role_decorator.py
(+5 files in other folders)
