[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "pygame>=2.6.1",
    "sqlalchemy>=2.0.41",
    "pyjwt>=2.10.1",
    "agent>=0.1.3",
    "python-dotenv>=1.1.1",
    "twilio>=9.6.4",
    "langchain>=0.3.26",
    "pandas>=2.3.1",
    "werkzeug>=3.1.3",
]
